[package]
name = "cells"
version = "0.1.0"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.98.0"
rand = "0.6.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true
lto = false
opt-level = 2

[profile.bench]
debug = true
opt-level = 2
