[package]
name = "cells"
version = "0.1.0"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston_window = "0.105.0"
pistoncore-input = "0.28.0"
pistoncore-window = "0.44.0"
pistoncore-event_loop = "0.49.0"
piston2d-opengl_graphics = "0.69.0"
piston2d-graphics = "0.35.0"
pistoncore-sdl2_window = "0.63.0"
shader_version = "0.6.0"
gl = "0.14.0"
rand = "0.6.5"
palette = "0.4"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true
lto = false
opt-level = 2

[profile.bench]
debug = true
opt-level = 2
